🐛 (App.css): fix styling issue where the stroke width of selected edges was not consistent with the design 📝 (App.css): update stroke width of all edges to 2px for better visibility and consistency in the application

--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -136,13 +136,14 @@ body {
 /* selected */
 .react-flow__edge.selected .react-flow__edge-path {
   stroke: var(--selected) !important;
-  stroke-width: 1.5px !important;
+  stroke-width: 2px !important;
 }
 
 .react-flow__edge .react-flow__edge-path {
-  stroke: var(--connection) !important;
   transition: color;
+  stroke: var(--connection) !important;
   transition-duration: 150ms;
+  stroke-width: 2px !important;
 }
 
 .react-flow__edge.running .react-flow__edge-path {
